# translate

./: Cargo.toml  LICENSE  README.md  README_zh.md
src/: lib.rs  main.rs
tests/: translate_test.rs
