[package]
name = "translate"
version = "0.1.0"
edition = "2021"
authors = ["gui117"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
urlencoding = "2.1.3"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
lto = true
